2007-06-15  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	Added some comments; renamed MTX_GL_SCALE to MTX_GL_SCALE_X for
	consistency; removed some debug output.

2007-06-14  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-vbox.c:
	* clutter/clutter-hbox.c:
	(clutter_vbox_pack_child):
	(clutter_hbox_pack_child):
	Fixed child coords.
	
2007-06-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-box.[ch]: Base class for layout containers.

	* clutter/clutter-hbox.[ch]: Horizontal box actor.
	
	* clutter/clutter-vbox.[ch]: Vertical box actor.

	* clutter/clutter.h:
	* clutter/Makefile.am: Build glue

	* tests/Makefile.am:
	* tests/test-boxes.c: Test suite for ClutterBox API and
	implementations.

2007-06-14  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gl/cogl.c: (cogl_check_extension):
	Actually populate this func and remove the static alternate
	named one. Means GLX actually checks for available extensions.
	Other minor tidy ups.
	
	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	Add support for GLX_SGI_swap_control to do vblanking prefering 
        over glXGetVideoSyncSGI. Should fix issues on Intel chips with 
        very slow frame rates due to vblank problems. 
	Thanks to  Michel Danzer for tips, see;
        http://bugs.freedesktop.org/show_bug.cgi?id=10542  

	* test/test-actors.c:
	Change FPS to 60.

2007-06-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeout-pool.c: Make ClutterTimeoutPool
	more thread-safe, using a static lock.

	(clutter_timeout_pool_dispatch), (clutter_timeout_pool_remove): Fix
	a race condition-turned-in-memory corruption bug, triggered by
	removing a timeout from the pool while still spinning the pool
	source.

2007-06-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* doc/manual/Makefile.am: Find xmlto and jw in the path and
	use the symbolic names when building the manual.
