@@ -11,7 +11,7 @@ test_textures_SOURCES  = test-textures.c
 test_events_SOURCES    = test-events.c
 test_offscreen_SOURCES = test-offscreen.c
 test_scale_SOURCES     = test-scale.c
-test_actor_SOURCES     = test-actors.c
+test_actors_SOURCES     = test-actors.c
 test_behave_SOURCES    = test-behave.c 
 test_text_SOURCES      = test-text.c 
 test_entry_SOURCES     = test-entry.c
